--- a/po/es.po
+++ b/po/es.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: bluefish gtk2-port\n"
-"POT-Creation-Date: 2003-07-02 08:33-0300\n"
+"POT-Creation-Date: 2003-07-03 10:42+0200\n"
 "PO-Revision-Date: 2001-11-17 15:24+0100\n"
 "Last-Translator: Walter Echarri <wecharri@yahoo.com>\n"
 "Language-Team: espanol <es@li.org>\n"
@@ -1431,84 +1431,6 @@ msgstr "Mantener _diálogo"
 msgid "starting bluefish"
 msgstr "iniciando bluefish"
 
-#: ../src/html2.c:586
-msgid "Cascading StyleSheet dialog"
-msgstr "Diálogo de CSS"
-
-# src/html.c:1797
-# src/html_form.c:398
-#: ../src/html2.c:606
-msgid "_Selector:"
-msgstr "_Selector:"
-
-#: ../src/html2.c:625
-msgid "_Property:"
-msgstr "_Propiedad:"
-
-# src/html.c:1525 src/html.c:1545 src/html.c:1579 src/html.c:1630
-# src/html.c:1667 src/html.c:1719 src/html.c:1763
-# src/html_form.c:126 src/html_form.c:146 src/html_form.c:180
-# src/html_form.c:231 src/html_form.c:268 src/html_form.c:320
-# src/html_form.c:364 src/wml.c:171 src/wml.c:211
-#: ../src/html2.c:627 ../src/html_form.c:286 ../src/html_form.c:353
-#: ../src/html_form.c:415 ../src/html_form.c:471 ../src/html_form.c:534
-#: ../src/html_form.c:644
-msgid "_Value:"
-msgstr "_Valor:"
-
-# src/html.c:1797
-# src/html_form.c:398
-#: ../src/html2.c:645
-msgid "Selector"
-msgstr "Selector"
-
-#: ../src/html2.c:645 ../src/html2.c:648
-msgid "Property"
-msgstr "Propiedad"
-
-# src/html.c:1525 src/html.c:1545 src/html.c:1579 src/html.c:1630
-# src/html.c:1667 src/html.c:1719 src/html.c:1763
-# src/html_form.c:126 src/html_form.c:146 src/html_form.c:180
-# src/html_form.c:231 src/html_form.c:268 src/html_form.c:320
-# src/html_form.c:364 src/wml.c:171 src/wml.c:211
-#: ../src/html2.c:645 ../src/html2.c:648
-msgid "Value"
-msgstr "Valor"
-
-# src/stringlist.c:146
-# src/stringlist.c:142
-#: ../src/html2.c:663
-msgid " _Add "
-msgstr "_Agregar "
-
-# src/stringlist.c:147
-# src/stringlist.c:143
-#: ../src/html2.c:666
-msgid " _Update "
-msgstr "_Actualizar "
-
-# src/stringlist.c:148
-# src/stringlist.c:144
-#: ../src/html2.c:669
-msgid " _Delete "
-msgstr "_Borrar "
-
-# src/html.c:1844 src/toolbars.c:440
-# src/html.c:1128 src/toolbars.c:444
-#: ../src/html2.c:925 ../src/html2.c:962
-msgid "_Style..."
-msgstr "_Estilo..."
-
-# src/callbacks.c:647
-# src/project.c:56
-#: ../src/html2.c:1145
-msgid "Bluefish: Select color"
-msgstr "Bluefish - Selector de colores"
-
-#: ../src/html2.c:1165
-msgid "_websafe"
-msgstr "_websafe"
-
 # src/toolbars.c:465
 # src/toolbars.c:510
 #: ../src/html.c:353
@@ -1621,7 +1543,7 @@ msgstr "_Objetivo"
 #: ../src/html.c:577 ../src/html.c:817 ../src/html.c:1349 ../src/html.c:1783
 #: ../src/html_form.c:220 ../src/html_form.c:282 ../src/html_form.c:349
 #: ../src/html_form.c:411 ../src/html_form.c:467 ../src/html_form.c:530
-#: ../src/html_form.c:589 ../src/image.c:271
+#: ../src/html_form.c:589 ../src/image.c:280
 msgid "_Name:"
 msgstr "_Nombre"
 
@@ -1665,7 +1587,7 @@ msgstr "_Idioma"
 #: ../src/html_form.c:175 ../src/html_form.c:232 ../src/html_form.c:301
 #: ../src/html_form.c:365 ../src/html_form.c:419 ../src/html_form.c:480
 #: ../src/html_form.c:602 ../src/html_table.c:106 ../src/html_table.c:259
-#: ../src/html_table.c:367 ../src/image.c:279
+#: ../src/html_table.c:367 ../src/image.c:288
 msgid "Custo_m:"
 msgstr "_Personalizar"
 
@@ -1744,7 +1666,7 @@ msgstr "Regla Horizontal"
 # src/html.c:1279 src/html.c:1955 src/images.c:241
 # src/html.c:813 src/html.c:1239 src/html_table.c:86 src/html_table.c:157
 # src/html_table.c:213 src/html_table.c:294 src/images.c:240
-#: ../src/html.c:934 ../src/html.c:1869 ../src/image.c:297
+#: ../src/html.c:934 ../src/html.c:1869 ../src/image.c:306
 msgid "_Align:"
 msgstr "_Alinear:"
 
@@ -1759,7 +1681,7 @@ msgstr "_Alto:"
 # src/html.c:827 src/html.c:1215 src/html_table.c:204 src/html_table.c:285
 # src/images.c:211
 #: ../src/html.c:947 ../src/html.c:1873 ../src/html_table.c:139
-#: ../src/html_table.c:386 ../src/image.c:255
+#: ../src/html_table.c:386 ../src/image.c:264
 msgid "_Width:"
 msgstr "A_ncho:"
 
@@ -2059,6 +1981,84 @@ msgstr "_Relacionar:"
 msgid "_Type:"
 msgstr "_Tipo:"
 
+#: ../src/html2.c:586
+msgid "Cascading StyleSheet dialog"
+msgstr "Diálogo de CSS"
+
+# src/html.c:1797
+# src/html_form.c:398
+#: ../src/html2.c:606
+msgid "_Selector:"
+msgstr "_Selector:"
+
+#: ../src/html2.c:625
+msgid "_Property:"
+msgstr "_Propiedad:"
+
+# src/html.c:1525 src/html.c:1545 src/html.c:1579 src/html.c:1630
+# src/html.c:1667 src/html.c:1719 src/html.c:1763
+# src/html_form.c:126 src/html_form.c:146 src/html_form.c:180
+# src/html_form.c:231 src/html_form.c:268 src/html_form.c:320
+# src/html_form.c:364 src/wml.c:171 src/wml.c:211
+#: ../src/html2.c:627 ../src/html_form.c:286 ../src/html_form.c:353
+#: ../src/html_form.c:415 ../src/html_form.c:471 ../src/html_form.c:534
+#: ../src/html_form.c:644
+msgid "_Value:"
+msgstr "_Valor:"
+
+# src/html.c:1797
+# src/html_form.c:398
+#: ../src/html2.c:645
+msgid "Selector"
+msgstr "Selector"
+
+#: ../src/html2.c:645 ../src/html2.c:648
+msgid "Property"
+msgstr "Propiedad"
+
+# src/html.c:1525 src/html.c:1545 src/html.c:1579 src/html.c:1630
+# src/html.c:1667 src/html.c:1719 src/html.c:1763
+# src/html_form.c:126 src/html_form.c:146 src/html_form.c:180
+# src/html_form.c:231 src/html_form.c:268 src/html_form.c:320
+# src/html_form.c:364 src/wml.c:171 src/wml.c:211
+#: ../src/html2.c:645 ../src/html2.c:648
+msgid "Value"
+msgstr "Valor"
+
+# src/stringlist.c:146
+# src/stringlist.c:142
+#: ../src/html2.c:663
+msgid " _Add "
+msgstr "_Agregar "
+
+# src/stringlist.c:147
+# src/stringlist.c:143
+#: ../src/html2.c:666
+msgid " _Update "
+msgstr "_Actualizar "
+
+# src/stringlist.c:148
+# src/stringlist.c:144
+#: ../src/html2.c:669
+msgid " _Delete "
+msgstr "_Borrar "
+
+# src/html.c:1844 src/toolbars.c:440
+# src/html.c:1128 src/toolbars.c:444
+#: ../src/html2.c:925 ../src/html2.c:962
+msgid "_Style..."
+msgstr "_Estilo..."
+
+# src/callbacks.c:647
+# src/project.c:56
+#: ../src/html2.c:1145
+msgid "Bluefish: Select color"
+msgstr "Bluefish - Selector de colores"
+
+#: ../src/html2.c:1165
+msgid "_websafe"
+msgstr "_websafe"
+
 # src/html.c:1478
 # src/html_form.c:79
 #: ../src/html_form.c:129
@@ -2248,53 +2248,53 @@ msgstr "_Sin ajuste de línea:"
 
 # src/images.c:180
 # src/images.c:178
-#: ../src/image.c:218
+#: ../src/image.c:227
 msgid "Insert thumbnail"
 msgstr "Insertar imagen en miniatura"
 
 # src/images.c:182
 # src/images.c:180
-#: ../src/image.c:220
+#: ../src/image.c:229
 msgid "Insert image"
 msgstr "Insertar imagen"
 
 # src/images.c:189
 # src/images.c:186
-#: ../src/image.c:227
+#: ../src/image.c:236
 msgid "Preview"
 msgstr "Vista previa"
 
 # src/images.c:197
 # src/images.c:201
-#: ../src/image.c:247
+#: ../src/image.c:256
 msgid "_Image location:"
 msgstr "_Ubicación de la imagen:"
 
 # src/html.c:1212 src/html.c:1293 src/html.c:1939 src/images.c:220
 # src/html.c:1223 src/html_table.c:227 src/html_table.c:308 src/images.c:219
-#: ../src/image.c:262
+#: ../src/image.c:271
 msgid "Hei_ght:"
 msgstr "_Altura:"
 
-#: ../src/image.c:267
+#: ../src/image.c:276
 msgid "_Usemap:"
 msgstr "_Usemap:"
 
 # src/images.c:225
 # src/images.c:224
-#: ../src/image.c:275
+#: ../src/image.c:284
 msgid "Alternate _text:"
 msgstr "_Texto alterno:"
 
 # src/images.c:246
 # src/images.c:245
-#: ../src/image.c:283
+#: ../src/image.c:292
 msgid "_Hspace:"
 msgstr "Espaciado _horizontal:"
 
 # src/images.c:252
 # src/images.c:251
-#: ../src/image.c:287
+#: ../src/image.c:296
 msgid "_Vspace:"
 msgstr "Espaciado _vertical:"
 
@@ -2302,17 +2302,17 @@ msgstr "Espaciado _vertical:"
 # src/html.c:1947 src/images.c:235
 # src/html.c:1009 src/html.c:1061 src/html.c:1064 src/html.c:1231
 # src/html_table.c:110 src/images.c:234
-#: ../src/image.c:301
+#: ../src/image.c:310
 msgid "Borde_r:"
 msgstr "Bo_rde:"
 
-#: ../src/image.c:362
+#: ../src/image.c:371
 msgid "Select files for thumbnail creation"
 msgstr "Seleccionar archivos para la creación de miniaturas"
 
 # src/html.c:1421
 # src/html.c:1072
-#: ../src/image.c:478
+#: ../src/image.c:487
 msgid "Scaling (%)"
 msgstr "Cambiar de escala (%)"
 
@@ -2320,37 +2320,37 @@ msgstr "Cambiar de escala (%)"
 # src/images.c:212
 # src/html.c:827 src/html.c:1215 src/html_table.c:204 src/html_table.c:285
 # src/images.c:211
-#: ../src/image.c:482 ../src/image.c:490
+#: ../src/image.c:491 ../src/image.c:499
 msgid "Width"
 msgstr "Ancho"
 
 # src/html.c:1212 src/html.c:1293 src/html.c:1939 src/images.c:220
 # src/html.c:1223 src/html_table.c:227 src/html_table.c:308 src/images.c:219
-#: ../src/image.c:486 ../src/image.c:511
+#: ../src/image.c:495 ../src/image.c:520
 msgid "Height"
 msgstr "Alto"
 
-#: ../src/image.c:501
+#: ../src/image.c:510
 msgid "Multi thumbnail"
 msgstr "Imágenes en miniaturas múltiples"
 
-#: ../src/image.c:506
+#: ../src/image.c:515
 msgid "By scaling"
 msgstr "Según escala"
 
-#: ../src/image.c:507
+#: ../src/image.c:516
 msgid "By width, keep aspect ratio"
 msgstr "Según ancho, mantener proporciones"
 
-#: ../src/image.c:508
+#: ../src/image.c:517
 msgid "By height, keep aspect ratio"
 msgstr "Según altura, mantener proporciones"
 
-#: ../src/image.c:509
+#: ../src/image.c:518
 msgid "By width and height, ignore aspect ratio"
 msgstr "Según ancho y alto, ingnorar proporciones"
 
-#: ../src/image.c:536
+#: ../src/image.c:545
 msgid ""
 "%r: original filename  %t: thumbnail filename\n"
 "%w: original width  %h: original height\n"
@@ -4436,6 +4436,13 @@ msgstr "Editor Menú Personalizado"
 msgid "_Menu Path:"
 msgstr "_Ruta del menú:"
 
+# src/menu.c:803 src/toolbars.c:421
+# src/menu.c:884 src/toolbars.c:425
+#: ../src/menu.c:1872
+#, fuzzy
+msgid "Menu path"
+msgstr "_Ruta del menú:"
+
 # src/wizards.c:143
 # src/wizards.c:138
 #: ../src/menu.c:1892
@@ -5253,6 +5260,17 @@ msgstr "Tipo POSIX"
 msgid "PERL type"
 msgstr "Tipo PERL"
 
+#: ../src/snr2.c:1251
+#, fuzzy
+msgid "Starts at:"
+msgstr "Patrón inicial"
+
+# src/snr2.c:594
+#: ../src/snr2.c:1263
+#, fuzzy
+msgid "Regular expression:"
+msgstr "Error expresión regular:"
+
 #: ../src/snr2.c:1277
 msgid "Normal"
 msgstr "Normal"
@@ -5268,6 +5286,13 @@ msgstr "Mayúsculas"
 #: ../src/snr2.c:1277
 msgid "Lowercase"
 msgstr "Minúsculas"
+
+# src/snr.c:209
+# src/snr2.c:560 src/snr2.c:597
+#: ../src/snr2.c:1278
+#, fuzzy
+msgid "Replace type:"
+msgstr "_Reemplazar:"
 
 #: ../src/snr2.c:1292
 msgid "Match ca_se"
@@ -5419,5 +5444,3 @@ msgstr "F_uente:"
 #: ../src/wizards.c:224
 msgid "Size:"
 msgstr "Tamaño:"
-
-
